# Crunchyroll4Linux

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Crunchyroll4Linux  Crunchyroll4Linux.desktop  PKGBUILD  README.md  install_manifest.txt  main.cpp  main.h
